CSS for reviews page. BUG: avatar not showing on reviews page.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,6 +15,7 @@
     padding: 10px;
     border-radius: 15px;
     border: 1px solid #dadadf;
+    margin-bottom: 12px;
   }
   
   .SignInUpImage {
